--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <article class="secundario">
                 
                 <div class="div_inicio">
-                    <a href="https://www.youtube.com/watch?v=KcBStos46EM" target="_blank"><img src="imagenes/galeria/trailer.jpg" alt="Throg">
-                    <h2>TRAILER OFICIAL</h2>
+                    <a href="https://www.disneyplus.com/es-419/browse/entity-8f8c5cbb-e5ba-4285-9e2c-86abcac9fd50" target="_blank"><img src="imagenes/galeria/loki_disney.jpg" alt="Loki en Disney+">
+                    <h2>VE LOKI AHORA</h2>
                     </a>
                 </div>
                 <div class="div_inicio">
@@ -58,7 +58,7 @@
             <div class="redes">
                 <a href="https://www.facebook.com/lokiofficial/" target="_blank"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
                 <a href="https://x.com/lokiofficial?lang=es" target="_blank"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
-                <a href="https://www.youtube.com/@MarvelLatino" target="_blank"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
+                <a href="https://www.youtube.com/watch?v=KcBStos46EM&t=1s" target="_blank"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
                 <a href="https://www.instagram.com/officialloki/?hl=es" target="_blank"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
             </div>
             <div class="copy">
