--- a/galeria.html
+++ b/galeria.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <link href="https://fonts.googleapis.com/css2?family=Skranji:wght@400;700&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/estilos.css">
         <link href="css/lightbox.css" rel="stylesheet">
-        <title> Galeria. </title>
+        <title> Galería. </title>
     </head>
     <body>
         <header>
@@ -33,29 +36,29 @@
         <section>
             <h1>GALERIA</h1>
             <article class="galeria">
-                <a class="example-image-link" href="imagenes/galeria/cocodriloki.jpg" data-lightbox="Buzz" data-title="Cocodriloki."><img class="example-image" src="imagenes/galeria/cocodriloki.jpg" alt="Cocodriloki"/></a>
-                <a class="example-image-link" href="imagenes/galeria/Lamentis.jpg" data-lightbox="Buzz" data-title="Loki y Sylvie en Lamentis."><img class="example-image" src="imagenes/galeria/Lamentis.jpg" alt="Lamentis"/></a>
-                <a class="example-image-link" href="imagenes/galeria/loki.jpg" data-lightbox="Buzz" data-title="Un proposito glorioso"><img class="example-image" src="imagenes/galeria/loki.jpg" alt="Buzz Lightyear volando"/></a>
-                <a class="example-image-link" href="imagenes/galeria/loki1.jpg" data-lightbox="Buzz" data-title="Loki poster."><img class="example-image" src="imagenes/galeria/loki1.jpg" alt="Buzz Lightyear con su gato"/></a>
-                <a class="example-image-link" href="imagenes/galeria/loki2.jpg" data-lightbox="Buzz" data-title="Loki en la sala de archivos temporales."><img class="example-image" src="imagenes/galeria/loki2.jpg" alt="Buzz Lightyear con su gato"/></a>
-                <a class="example-image-link" href="imagenes/galeria/loki3.jpg" data-lightbox="Buzz" data-title="Loki poster"><img class="example-image" src="imagenes/galeria/loki3.jpg" alt="Buzz Lightyear señalando su imagen en un espejo"/></a>
-                <a class="example-image-link" href="imagenes/galeria/loki_y_sylvie1.jpg" data-lightbox="Buzz" data-title="Loki y Sylvie en el vacio."><img class="example-image" src="imagenes/galeria/loki_y_sylvie1.jpg" alt="Buzz Lightyear volando"/></a>
-                <a class="example-image-link" href="imagenes/galeria/loki_y_sylvie.jpg" data-lightbox="Buzz" data-title="Loki y Sylvie en el vacio."><img class="example-image" src="imagenes/galeria/loki_y_sylvie.jpg" alt="Buzz Lightyear con su gato"/></a>
-                <a class="example-image-link" href="imagenes/galeria/mobius.jpg" data-lightbox="Buzz" data-title="Mobius frente al telar temporal."><img class="example-image" src="imagenes/galeria/mobius.jpg" alt="Buzz Lightyear con su gato"/></a>
-                <a class="example-image-link" href="imagenes/galeria/mobius_loki_1893.jpg" data-lightbox="Buzz" data-title="Loki y Mobius en 1893."><img class="example-image" src="imagenes/galeria/mobius_loki_1893.jpg" alt="Buzz Lightyear señalando su imagen en un espejo"/></a>
-                <a class="example-image-link" href="imagenes/galeria/mobius_traje.jpg" data-lightbox="Buzz" data-title="Ouroboros preparando a Mobius."><img class="example-image" src="imagenes/galeria/mobius_traje.jpg" alt="Buzz Lightyear volando"/></a>
-                <a class="example-image-link" href="imagenes/galeria/mobius_y_loki.jpg" data-lightbox="Buzz" data-title="Mobius y Loki conversando."><img class="example-image" src="imagenes/galeria/mobius_y_loki.jpg" alt="Buzz Lightyear con su gato"/></a>
-                <a class="example-image-link" href="imagenes/galeria/ouroboros_taller.jpg" data-lightbox="Buzz" data-title="Ouroboros en su taller."><img class="example-image" src="imagenes/galeria/ouroboros_taller.jpg" alt="Buzz Lightyear con su gato"/></a>
-                <a class="example-image-link" href="imagenes/galeria/rompiendo.jpg" data-lightbox="Buzz" data-title="Loki, Mobius y B-15 interrogando a X-5."><img class="example-image" src="imagenes/galeria/rompiendo.jpg" alt="Buzz Lightyear señalando su imagen en un espejo"/></a>
-                <a class="example-image-link" href="imagenes/galeria/timekeepers.jpg" data-lightbox="Buzz" data-title="Timekeepers poster."><img class="example-image" src="imagenes/galeria/timekeepers.jpg" alt="Buzz Lightyear volando"/></a>
-                <a class="example-image-link" href="imagenes/galeria/variante-loki.jpg" data-lightbox="Buzz" data-title="Variante de Loki niño."><img class="example-image" src="imagenes/galeria/variante-loki.jpg" alt="Buzz Lightyear con su gato"/></a>
+                <a class="example-image-link" href="imagenes/galeria/cocodriloki.jpg" data-lightbox="Loki" data-title="Cocodriloki."><img class="example-image" src="imagenes/galeria/cocodriloki_mini.jpg" alt="Cocodriloki"/></a>
+                <a class="example-image-link" href="imagenes/galeria/Lamentis.jpg" data-lightbox="Loki" data-title="Loki y Sylvie en Lamentis."><img class="example-image" src="imagenes/galeria/Lamentis_mini.jpg" alt="Lamentis"/></a>
+                <a class="example-image-link" href="imagenes/galeria/loki.jpg" data-lightbox="Loki" data-title="Un proposito glorioso"><img class="example-image" src="imagenes/galeria/loki.jpg" alt="Un proposito glorioso"/></a>
+                <a class="example-image-link" href="imagenes/galeria/ravonna.jpg" data-lightbox="Loki" data-title="Ravonna en 1893."><img class="example-image" src="imagenes/galeria/ravonna_mini.jpg" alt="Ravonna en 1893."/></a>
+                <a class="example-image-link" href="imagenes/galeria/loki2.jpg" data-lightbox="Loki" data-title="Loki en la sala de archivos temporales."><img class="example-image" src="imagenes/galeria/loki2_mini.jpg" alt="Loki en la sala de archivos temporales."/></a>
+                <a class="example-image-link" href="imagenes/galeria/loki3.jpg" data-lightbox="Loki" data-title="Loki poster"><img class="example-image" src="imagenes/galeria/loki3_mini.jpg" alt="Loki poster"/></a>
+                <a class="example-image-link" href="imagenes/galeria/loki_y_sylvie1.jpg" data-lightbox="Loki" data-title="Loki y Sylvie en el vacio."><img class="example-image" src="imagenes/galeria/loki_y_sylvie1_mini.jpg" alt="Loki y Sylvie en el vacio."/></a>
+                <a class="example-image-link" href="imagenes/galeria/loki_y_sylvie.jpg" data-lightbox="Loki" data-title="Loki y Sylvie en el vacio."><img class="example-image" src="imagenes/galeria/loki_y_sylvie_mini.jpg" alt="Loki y Sylvie en el vacio."/></a>
+                <a class="example-image-link" href="imagenes/galeria/mobius.jpg" data-lightbox="Loki" data-title="Mobius frente al telar temporal."><img class="example-image" src="imagenes/galeria/mobius_mini.jpg" alt="Mobius frente al telar temporal."/></a>
+                <a class="example-image-link" href="imagenes/galeria/mobius_loki_1893.jpg" data-lightbox="Loki" data-title="Loki y Mobius en 1893."><img class="example-image" src="imagenes/galeria/mobius_loki_1893_mini.jpg" alt="Loki y Mobius en 1893."/></a>
+                <a class="example-image-link" href="imagenes/galeria/mobius_traje.jpg" data-lightbox="Loki" data-title="Ouroboros preparando a Mobius."><img class="example-image" src="imagenes/galeria/mobius_traje_mini.jpg" alt="Ouroboros preparando a Mobius."/></a>
+                <a class="example-image-link" href="imagenes/galeria/mobius_y_loki.jpg" data-lightbox="Loki" data-title="Mobius y Loki conversando."><img class="example-image" src="imagenes/galeria/mobius_y_loki_mini.jpg" alt="Mobius y Loki conversando."/></a>
+                <a class="example-image-link" href="imagenes/galeria/ouroboros_taller.jpg" data-lightbox="Loki" data-title="Ouroboros en su taller."><img class="example-image" src="imagenes/galeria/ouroboros_taller_mini.jpg" alt="Ouroboros en su taller."/></a>
+                <a class="example-image-link" href="imagenes/galeria/rompiendo.jpg" data-lightbox="Loki" data-title="Loki, Mobius y B-15 interrogando a X-5."><img class="example-image" src="imagenes/galeria/rompiendo_mini.jpg" alt="Loki, Mobius y B-15 interrogando a X-5."/></a>
+                <a class="example-image-link" href="imagenes/galeria/timekeepers.jpg" data-lightbox="Loki" data-title="Timekeepers poster."><img class="example-image" src="imagenes/galeria/timekeepers_mini.jpg" alt="Timekeepers poster."/></a>
+                <a class="example-image-link" href="imagenes/galeria/variante-loki.jpg" data-lightbox="Loki" data-title="Variante de Loki niño."><img class="example-image" src="imagenes/galeria/variante-loki_mini.jpg" alt="Variante de Loki niño."/></a>
             </article>
         </section>
         <footer>
             <div class="redes">
                 <a href="https://www.facebook.com/lokiofficial/" target="_blank"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
                 <a href="https://x.com/lokiofficial?lang=es" target="_blank"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
-                <a href="https://www.youtube.com/@MarvelLatino" target="_blank"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
+                <a href="https://www.youtube.com/watch?v=KcBStos46EM&t=1s" target="_blank"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
                 <a href="https://www.instagram.com/officialloki/?hl=es" target="_blank"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
             </div>
             <div class="copy">
