--- a/personajes.html
+++ b/personajes.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/estilos.css" />
-    <title>Personajes</title>
+    <link href="https://fonts.googleapis.com/css2?family=Skranji:wght@400;700&display=swap" rel="stylesheet">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/estilos.css">
+        <title>Personajes.</title>
   </head>
   <body>
     <header>
@@ -36,30 +39,30 @@
       <article class="cards">
         <div class="container">
           <div class="panel active" style="background-image: url(../lokiweb/imagenes/reparto/loki.jpg)">
-            <h3>Loki, interpretado por Tom Hiddleston, es una variante del Dios de las Travesuras que, tras escapar con el Tesseract, es capturado por la Autoridad de Variación Temporal (TVA). Obligado a ayudarles a corregir anomalías temporales, Loki inicia un viaje de autodescubrimiento y redención, cuestionando su identidad y propósito en un universo expansivo y lleno de multiversos.</h3>
+            <p >Loki, interpretado por Tom Hiddleston, es una variante del Dios de las Travesuras que, tras escapar con el Tesseract, es capturado por la Autoridad de Variación Temporal (TVA). Obligado a ayudarles a corregir anomalías temporales, Loki inicia un viaje de autodescubrimiento y redención, cuestionando su identidad y propósito en un universo expansivo y lleno de multiversos.</p>
           </div>
           <div class="panel" style="background-image: url(../lokiweb/imagenes/reparto/mobius.jpg)">
-            <h3>
-              Mobius M. Mobius, interpretado por Owen Wilson, es un agente de la Autoridad de Variación Temporal (TVA) encargado de investigar anomalías temporales. Actúa como mentor de Loki, ayudándole a explorar su potencial y cuestionar la naturaleza de la TVA. Con su carácter meticuloso e irónico, Mobius es fundamental para el desarrollo de la trama y el descubrimiento de los secretos de la TVA.</h3>
+            <p>
+              Mobius M. Mobius, interpretado por Owen Wilson, es un agente de la Autoridad de Variación Temporal (TVA) encargado de investigar anomalías temporales. Actúa como mentor de Loki, ayudándole a explorar su potencial y cuestionar la naturaleza de la TVA. Con su carácter meticuloso e irónico, Mobius es fundamental para el desarrollo de la trama y el descubrimiento de los secretos de la TVA.</p>
           </div>
           <div class="panel" style="background-image: url(..//lokiweb/imagenes/reparto/sylvie.jpg)">
-            <h3>Sylvie Laufeydottir, interpretada por Sophia Di Martino, es una variante femenina de Loki que ha pasado su vida escapando y luchando contra la Autoridad de Variación Temporal (TVA). Sylvie busca destruir la TVA, desarrollando una relación compleja con Loki mientras exploran juntos temas de identidad y destino. Su determinación y habilidades únicas la convierten en un personaje esencial y dinámico en la serie.</h3>
+            <p>Sylvie Laufeydottir, interpretada por Sophia Di Martino, es una variante femenina de Loki que ha pasado su vida escapando y luchando contra la Autoridad de Variación Temporal (TVA). Sylvie busca destruir la TVA, desarrollando una relación compleja con Loki mientras exploran juntos temas de identidad y destino. Su determinación y habilidades únicas la convierten en un personaje esencial y dinámico en la serie.</p>
           </div>
           <div class="panel" style="background-image: url(../lokiweb/imagenes/reparto/ravonna.jpg)">
-            <h3>Ravonna Renslayer, interpretada por Gugu Mbatha-Raw, es una jueza de la Autoridad de Variación Temporal (TVA). Leal y autoritaria, supervisa el orden en la línea temporal y los agentes de la TVA. Su papel es crucial para la trama, revelando conflictos internos y misterios sobre la verdadera naturaleza de la TVA.</h3>
+            <p>Ravonna Renslayer, interpretada por Gugu Mbatha-Raw, es una jueza de la Autoridad de Variación Temporal (TVA). Leal y autoritaria, supervisa el orden en la línea temporal y los agentes de la TVA. Su papel es crucial para la trama, revelando conflictos internos y misterios sobre la verdadera naturaleza de la TVA.</p>
           </div>
           <div class="panel" style="background-image: url(../lokiweb/imagenes/reparto/kang.jpg )">
-            <h3>
-              Kang el Conquistador, interpretado por Jonathan Majors, es un villano poderoso y maestro del tiempo. Conocido por sus múltiples variantes, Kang controla la Autoridad de Variación Temporal (TVA) desde las sombras. Su conocimiento del multiverso y su capacidad para manipular el tiempo lo convierten en una amenaza formidable. Su introducción en la serie prepara el terreno para futuras complicaciones en el MCU.</h3>
+            <p>
+              Kang el Conquistador, interpretado por Jonathan Majors, es un villano poderoso y maestro del tiempo. Conocido por sus múltiples variantes, Kang controla la Autoridad de Variación Temporal (TVA) desde las sombras. Su conocimiento del multiverso y su capacidad para manipular el tiempo lo convierten en una amenaza formidable. Su introducción en la serie prepara el terreno para futuras complicaciones en el MCU.</p>
           </div>
           <div class="panel" style="background-image: url(..//lokiweb/imagenes/reparto/b15.jpg)">
-            <h3>Hunter B-15, interpretada por Wunmi Mosaku, es una agente de la Autoridad de Variación Temporal (TVA) inicialmente leal y estricta. Su desconfianza hacia Loki evoluciona cuando descubre la verdadera naturaleza de la TVA, transformándola en una figura crucial en la lucha contra la manipulación temporal. Con su firmeza y valentía, B-15 se convierte en una aliada importante para desafiar el orden establecido y buscar la verdad.</h3>
+            <p>Hunter B-15, interpretada por Wunmi Mosaku, es una agente de la Autoridad de Variación Temporal (TVA) inicialmente leal y estricta. Su desconfianza hacia Loki evoluciona cuando descubre la verdadera naturaleza de la TVA, transformándola en una figura crucial en la lucha contra la manipulación temporal. Con su firmeza y valentía, B-15 se convierte en una aliada importante para desafiar el orden establecido y buscar la verdad.</p>
           </div>
           <div class="panel" style="background-image: url(..//lokiweb/imagenes/reparto/ouroboros.jpg)">
-            <h3>Ouroboros "O.B.", interpretado por Ke Huy Quan, es un ingeniero brillante y excéntrico de la Autoridad de Variación Temporal (TVA). Encargado de la tecnología y el mantenimiento, O.B. tiene un vasto conocimiento de la TVA y su funcionamiento. Con su actitud amable y su ingenio, se convierte en un valioso aliado para Loki y Mobius en su lucha por descubrir los secretos de la organización y salvar la línea temporal.</h3>
+            <p>Ouroboros "O.B.", interpretado por Ke Huy Quan, es un ingeniero brillante y excéntrico de la Autoridad de Variación Temporal (TVA). Encargado de la tecnología y el mantenimiento, O.B. tiene un vasto conocimiento de la TVA y su funcionamiento. Con su actitud amable y su ingenio, se convierte en un valioso aliado para Loki y Mobius en su lucha por descubrir los secretos de la organización y salvar la línea temporal.</p>
           </div>
           <div class="panel" style="background-image: url(..//lokiweb/imagenes/reparto/msminutes.jpg)">
-            <h3>Miss Minutes, en "Loki" de Disney+, es una IA animada con la voz de Tara Strong. Miss Minutes guia a los personajes con su apariencia amigable y voz dulce, mientras explica el funcionamiento de la Autoridad de Variación Temporal (TVA) y las complejidades de la línea temporal. Su lealtad inquebrantable hacia la TVA y sus verdaderos objetivos añaden una capa de misterio e intriga a su personaje, convirtiéndola en una figura esencial y enigmática en la trama.</h3>
+            <p>Miss Minutes, en "Loki" de Disney+, es una IA animada con la voz de Tara Strong. Miss Minutes guia a los personajes con su apariencia amigable y voz dulce, mientras explica el funcionamiento de la Autoridad de Variación Temporal (TVA) y las complejidades de la línea temporal. Su lealtad inquebrantable hacia la TVA y sus verdaderos objetivos añaden una capa de misterio e intriga a su personaje, convirtiéndola en una figura esencial y enigmática en la trama.</p>
           </div>
         </div>
         </article>  
@@ -68,13 +71,23 @@
       <div class="redes">
         <a href="https://www.facebook.com/lokiofficial/" target="_blank"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
         <a href="https://x.com/lokiofficial?lang=es" target="_blank"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
-        <a href="https://www.youtube.com/@MarvelLatino" target="_blank"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
+        <a href="https://www.youtube.com/watch?v=KcBStos46EM&t=1s" target="_blank"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
         <a href="https://www.instagram.com/officialloki/?hl=es" target="_blank"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
       </div>
       <div class="copy">
           <h4>©2024 Hecho por Gauna, Nicolás Daniel.</h4>
       </div>
   </footer>
-    <script src="js/script.js"></script>
+  <script type="text/javascript">
+    function myFunction() {
+      var x = document.getElementById("menu_bar");
+      if (x.className === "") {
+        x.className += "responsive";
+      } else {
+        x.className = "";
+      }
+    }
+  </script>
+  <script src="js/script.js"></script>
   </body>
 </html>
