--- a/reseñas.html
+++ b/reseñas.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <link href="https://fonts.googleapis.com/css2?family=Skranji:wght@400;700&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/estilos.css">
         <title> Reseñas. </title>
     </head>
@@ -74,7 +77,7 @@
             <div class="redes">
                 <a href="https://www.facebook.com/lokiofficial/" target="_blank"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
                 <a href="https://x.com/lokiofficial?lang=es" target="_blank"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
-                <a href="https://www.youtube.com/@MarvelLatino" target="_blank"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
+                <a href="https://www.youtube.com/watch?v=KcBStos46EM&t=1s" target="_blank"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
                 <a href="https://www.instagram.com/officialloki/?hl=es" target="_blank"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
             </div>
             <div class="copy">
